// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Field should render as dense 1`] = `
<div class="mdc-text-field mdc-text-field--dense mdc-text-field--no-label"> <input class="mdc-text-field__input">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Text Field should render as disabled 1`] = `
<div class="mdc-text-field mdc-text-field--no-label mdc-text-field--disabled"> <input class="mdc-text-field__input" disabled="">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Text Field should render as focused 1`] = `
<div class="mdc-text-field mdc-text-field--no-label mdc-text-field--focused"> <input class="mdc-text-field__input">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Text Field should render as fullWidth 1`] = `
<div class="mdc-text-field mdc-text-field--fullwidth"> <input class="mdc-text-field__input">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Text Field should render as outlined 1`] = `
<div class="mdc-text-field mdc-text-field--outlined mdc-text-field--no-label"> <input class="mdc-text-field__input">
  <!---->
  <div class="mdc-notched-outline mdc-notched-outline--no-label">
    <div class="mdc-notched-outline__leading"></div>
    <!---->
    <div class="mdc-notched-outline__trailing"></div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`Text Field should render with leading icon 1`] = `
<div class="mdc-text-field mdc-text-field--with-leading-icon mdc-text-field--no-label"><i tabindex="0" role="button" class="mdc-text-field__icon"></i> <input class="mdc-text-field__input">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Text Field should render with no prop 1`] = `
<div class="mdc-text-field mdc-text-field--no-label"> <input class="mdc-text-field__input">
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Text Field should render with trailing icon 1`] = `
<div class="mdc-text-field mdc-text-field--with-trailing-icon mdc-text-field--no-label"> <input class="mdc-text-field__input">
  <!---->
  <!---->
  <!----> <i tabindex="0" role="button" class="mdc-text-field__icon"></i> </div>
`;
